--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
               September 2012 - 2015
             </div>
           </div> <!-- end job-title container -->
-          <p>I studied my Secondary sechool education at the Pampana High School Magburka </p>
+          <p>I studied my Secondary Sechool education at the Pampana High School Magburka </p>
         </div> <!-- end job -->
       </div>
     </section>
@@ -136,7 +136,7 @@
           </ul>
 
           <ul>
-            <li>Git</li>
+            <li>Git & GITHUB</li>
             <li>PHP</li>
             <li>MySQL</li>
             <li>SQL Server</li>
